--- a/src/styles/Story.module.css
+++ b/src/styles/Story.module.css
@@ -10,12 +10,23 @@
   z-index: 10;
 }
 
-.header h1 {
+/* .header h1 {
   text-align: center;
   font-size: 20px;
   font-weight: 800;
   cursor: pointer;
   padding: 0 8px;
+} */
+
+.header h1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  cursor: pointer;
+  flex: 1;
 }
 
 .header__btn {
